@@ -6,6 +6,8 @@
   - Restore STRICT_SOMATIC filter.
   - Close files opened when loading Goby Alignment header and index files. This fixes a too many file error
     that could occur when loading hundreds of alignments simultaneously.
+  - Allow lenient import mode for TSV files. This makes it possible to convert TSV files to lucene.index when
+    they have been created with Goby in the past with a \t character as last character of the column line.
 2.3.4
  - Optimize the speed of genotyping when some sites have very high coverage (>500M bases).
    Now sub-sampling to keep a random set of 10,000 bases for such sites. Expose the default
